--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,6 +1,6 @@
 /* elements */
 img {
-  max-width: 45%;
+  max-width: 100%;
   
 }
 
@@ -31,6 +31,7 @@ body {
   background-color:rgb(215, 247, 255);
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 footer {
@@ -48,7 +49,7 @@ footer {
 
 #msgbox {
   width: 29%;
-
+  position:absolute;
 }
 
 #msgbox > p {
@@ -71,7 +72,7 @@ footer {
   border: 1px solid black;
   margin: .5rem 0;
   padding: .5rem;
-  width: 40%;
+  width: 100%;
 }
 
 .card:hover {
@@ -125,6 +126,8 @@ footer {
   padding-left: 1rem;
   padding-right: 1rem;
   margin-top: 1rem;
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 @media (min-width: 576px) {
